--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,38 +22,39 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorAccent" />
+
         <activity
             android:name="in.squarei.socialconnect.activities.UserDashboardActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity android:name="in.squarei.socialconnect.activities.useraccesspackage.UserLoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="in.squarei.socialconnect.activities.useraccesspackage.UserLoginActivity" />
         <activity android:name="in.squarei.socialconnect.activities.useraccesspackage.UserRegisterActivity" />
         <activity android:name="in.squarei.socialconnect.activities.useraccesspackage.UserPasswordResetActivity" />
         <activity android:name="in.squarei.socialconnect.activities.useraccesspackage.UserPassActivity" />
         <activity android:name="in.squarei.socialconnect.activities.useraccesspackage.AppIntroActivity" />
         <activity android:name="in.squarei.socialconnect.activities.SplashActivity"></activity>
 
-        <service
-            android:name=".services.MyFirebaseMessagingService">
+        <service android:name=".services.MyFirebaseMessagingService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-        <service
-            android:name="in.squarei.socialconnect.services.MyFirebaseInstanceIDService">
+        <service android:name="in.squarei.socialconnect.services.MyFirebaseInstanceIDService">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
+
         <receiver android:name=".broadcastreceivers.SmsListener">
             <intent-filter>
-                <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
     </application>
