--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="in.squarei.socialconnect.socialConnectApplication.SocialConnectApplication"
+        android:name=".socialConnectApplication.SocialConnectApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,37 +17,43 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@mipmap/ic_launcher" />
-        <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
-             notification message. See README(https://goo.gl/6BKBk7) for more. -->
+        <!--
+             Set color used with incoming notification messages. This is used when no color is set for the incoming
+             notification message. See README(https://goo.gl/6BKBk7) for more.
+        -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorAccent" />
 
         <activity
-            android:name="in.squarei.socialconnect.activities.UserDashboardActivity"
+            android:name=".activities.UserDashboardActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
-        <activity android:name="in.squarei.socialconnect.activities.useraccesspackage.UserLoginActivity">
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.useraccesspackage.UserLoginActivity" />
+        <activity android:name=".activities.useraccesspackage.UserRegisterActivity" />
+        <activity android:name=".activities.useraccesspackage.UserPasswordResetActivity" />
+        <activity
+            android:name=".activities.useraccesspackage.UserPassActivity"
+            android:noHistory="true" />
+        <activity
+            android:name=".activities.useraccesspackage.AppIntroActivity"
+            android:noHistory="true" />
+        <activity
+            android:name=".activities.SplashActivity"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="in.squarei.socialconnect.activities.useraccesspackage.UserRegisterActivity" />
-        <activity android:name="in.squarei.socialconnect.activities.useraccesspackage.UserPasswordResetActivity" />
-        <activity android:name="in.squarei.socialconnect.activities.useraccesspackage.UserPassActivity" />
-        <activity android:name="in.squarei.socialconnect.activities.useraccesspackage.AppIntroActivity" />
-        <activity android:name="in.squarei.socialconnect.activities.SplashActivity"></activity>
 
         <service android:name=".services.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-        <service android:name="in.squarei.socialconnect.services.MyFirebaseInstanceIDService">
+        <service android:name=".services.MyFirebaseInstanceIDService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
@@ -58,6 +64,10 @@
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
+
+        <activity
+            android:name=".activities.UserProfileActivity"
+            android:windowSoftInputMode="stateHidden"></activity>
     </application>
 
 </manifest>
