--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,23 +36,23 @@
         <activity
             android:name=".activities.useraccesspackage.UserLoginActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activities.useraccesspackage.UserRegisterActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activities.useraccesspackage.UserPasswordResetActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activities.useraccesspackage.UserPassActivity"
             android:noHistory="true"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.useraccesspackage.AppIntroActivity"
             android:noHistory="true"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.SplashActivity"
             android:noHistory="true"
@@ -85,7 +85,8 @@
             android:name=".activities.UserProfileActivity"
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".activities.FriendProfileActivity" />
-        <activity android:name=".activities.UploadPostActivity"></activity>
+        <activity android:name=".activities.UploadPostActivity" />
+        <activity android:name=".activities.useraccesspackage.EnterOTPActivity"></activity>
     </application>
 
 </manifest>
