--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="in.squarei.socialconnect">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -86,7 +85,8 @@
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".activities.FriendProfileActivity" />
         <activity android:name=".activities.UploadPostActivity" />
-        <activity android:name=".activities.useraccesspackage.EnterOTPActivity"></activity>
+        <activity android:name=".activities.useraccesspackage.EnterOTPActivity" />
+        <activity android:name=".activities.useraccesspackage.UserCompleteProfile"></activity>
     </application>
 
 </manifest>
