--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,14 +40,14 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile project(':simple-crop-image-lib')
+
     compile 'com.github.paolorotolo:appintro:4.1.0'
-    compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:design:25.3.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.squareup.picasso:picasso:2.4.0'
-    compile 'com.google.android.gms:play-services-gcm:10.2.1'
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
     compile 'com.android.support:cardview-v7:25.3.0'
@@ -58,6 +58,7 @@ dependencies {
     compile 'com.google.firebase:firebase-core:10.2.1'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.quickblox:quickblox-android-sdk-chat:3.3.1'
+    compile 'com.google.android.gms:play-services:10.2.1'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
